# lagertha-vm

./: Cargo.toml
runtime/: Cargo.toml
runtime/src/: error.rs
runtime/src/class_loader/: mod.rs
runtime/src/heap/: method_area.rs  mod.rs
runtime/src/interpreter/: handlers.rs  mod.rs
runtime/src/native/preregistered/: java_io.rs  java_lang.rs  java_lang_ref.rs
runtime/src/native/registrable/: java_lang_class.rs  jdk_internal_misc_unsafe.rs
runtime/src/rt/: array.rs  class.rs  field.rs  interface.rs  method.rs  mod.rs
runtime/src/rt/constant_pool/: mod.rs
runtime/src/vm/: bootstrap_registry.rs  mod.rs
vm/: Cargo.toml
vm/src/: main.rs
