[workspace]
resolver = "2"

members = ["vm",
    #"javap",
    "runtime"]

[workspace.dependencies]
tracing = { version = "0.1", features = ["attributes", "log", "max_level_debug", "release_max_level_info"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-log = "0.2"
hotpath = "0.8.0"
