[package]
name = "lagertha-runtime"
version = "0.1.0"
edition = "2024"

[features]
default = []
log-runtime-traces = []
hotpath = ["hotpath/hotpath"]
hotpath-alloc = ["hotpath/hotpath-alloc"]
hotpath-off = ["hotpath/hotpath-off"]

[dependencies]
once_cell = "1.19"
libc = "0.2.177"
lasso = { version = "0.7.3", features = ["multi-threaded"] }
walkdir = "2"
byteorder = "1.5"
dashmap = "6.1.0"
num_enum = "0.7.4"
smallvec = "1.15.1"
itertools = "0.14.0"
tokio = { version = "1.48.0", features = ["sync", "net", "rt", "io-util", "macros"] }

hotpath = { workspace = true }
tracing-log = { workspace = true }

lagertha-classfile = { git = "https://github.com/lagertha-vm/lagertha-classfile" }
lagertha-image = { git = "https://github.com/lagertha-vm/lagertha-image" }
lagertha-common = { git = "https://github.com/lagertha-vm/lagertha-common" }

# TODO to be deleted
toml = "0.8"
toml_edit = "0.22"
