[package]
name = "lagertha-vm"
version = "0.1.0"
edition = "2024"

[features]
log-runtime-traces = ["lagertha-runtime/log-runtime-traces"]
hotpath = ["hotpath/hotpath"]
hotpath-alloc = ["hotpath/hotpath-alloc"]
hotpath-off = ["hotpath/hotpath-off"]

[dependencies]
clap = { version = "4.5.47", features = ["derive"] }

hotpath = { workspace = true }
lagertha-common = { git = "https://github.com/lagertha-vm/lagertha-common" }
lagertha-runtime = { path = "../runtime" }

tracing-log = { workspace = true }

[dev-dependencies]
assert_cmd = "2"
insta = { version = "1.42.2", features = ["yaml"] }
rstest = "0.26.1"

[build-dependencies]
walkdir = "2.5.0"